--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,8 +41,9 @@
         android:layout_marginTop="60dp"
         android:background="@drawable/glass_card_bg"
         android:elevation="8dp"
-        android:padding="24dp"
-        android:paddingTop="60dp"
+        android:paddingHorizontal="24dp"
+        android:paddingTop="110dp"
+        android:paddingBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAppTitle"
         app:layout_constraintVertical_bias="0.3">
