--- a/app/src/main/res/layout/row_camera.xml
+++ b/app/src/main/res/layout/row_camera.xml
@@ -59,7 +59,7 @@
             android:id="@+id/tvFrontLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="front :"
+            android:text="Front :"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:layout_marginTop="12dp"
