--- a/app/src/main/res/layout/fragment_teacher_home.xml
+++ b/app/src/main/res/layout/fragment_teacher_home.xml
@@ -38,7 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No classes scheduled for today!"
-        android:textSize="16sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:textColor="#757575"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
